# logx

./: Cargo.toml  commands_phase 2.txt  commands_phase4.txt  info.txt  info1.txt  phase3_commands.txt
src/: aggregator.rs  correlator.rs  filter.rs  formatter.rs  main.rs  parser.rs  reader.rs  reporter.rs  tui.rs  watcher.rs
